<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivityDashboard"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@drawable/background_login"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/textNamaToko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_store07"
            android:layout_gravity="center_vertical|start"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#f4f7f5"
            android:fontFamily="@font/aclonica"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <xyz.sahildave.arclayout.ArcLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:arc_cropCurve="cropConcave"
                    app:arc_height="70dp"
                    app:arc_position="bottom">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_login"
                        android:gravity="center"
                        android:orientation="vertical" />

                </xyz.sahildave.arclayout.ArcLayout>

                <TextView
                    android:id="@+id/textGreeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/aclonica"
                    android:singleLine="true"
                    android:text="@string/greetings_morning"
                    android:textColor="#f4f7f5"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textGreeting"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/aldrich"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="#f4f7f5"
                    android:textSize="8sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/textToday"
                    android:layout_marginTop="50dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_sales"
                        android:elevation="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/today"
                            android:textAlignment="viewStart"
                            android:textColor="#2da5de"
                            android:textSize="10sp"
                            android:fontFamily="@font/aclonica"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />

                        <TextView
                            android:id="@+id/textSalesToday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/sales_today"
                            android:textAlignment="center"
                            android:textColor="#2da5de"
                            android:fontFamily="@font/aldrich"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_sales"
                        android:elevation="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/this_month"
                            android:textAlignment="viewStart"
                            android:textColor="#2da5de"
                            android:textSize="10sp"
                            android:fontFamily="@font/aclonica"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />

                        <TextView
                            android:id="@+id/textSalesMonthly"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/sales_month"
                            android:textAlignment="center"
                            android:textColor="#2da5de"
                            android:fontFamily="@font/aldrich"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <fragment
                android:id="@+id/nav_host"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:defaultNavHost="true"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                app:navGraph="@navigation/navigation"
                tools:ignore="NestedWeights" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#ffffff"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="10dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:menu="@menu/menu"/>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnBukaMeja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffffff"
            android:src="@drawable/ic_cart"
            android:tint="#2da5de"
            app:layout_anchor="@id/app_bar"
            app:tint="#2da5de"
            android:contentDescription="@string/transaction" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>